@@ -1,3 +1,9 @@
+2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* daemon/liblegacy/opd_24_stst.c:
+	* daemon/liblegacy/opd_image.h:
+	* daemon/liblegacy/opd_image.h: nr_images static
+
 2003-10-27  John Levon  <levon@movementarian.org>
 
 	* doc/opcontrol.1.in: document --image=
